# Python-Reference-Microservice

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  cloudbuild.yaml  pyproject.toml  scripts.py
src/: main.py  run.py
src/bp/: __init__.py  domain.py  get_all_type_games_use_case.py  get_type_games_by_user.py  usecase.py
src/data/: __init__.py  get_type_games_repository.py  sentences_type_games_neo4j.py
src/di/: provider.py  providers.py
src/endpoints/: app.py  config.py  type_games_endpoint.py
src/resources/: file.json
test/: .coveragerc
test/bptest/: test_get_all_type_games_use_case.py  test_get_type_games_by_user_use_case.py
test/bptest/steps/: get_all_type_games_use_case_steps.py  get_type_games_by_user_use_case_steps.py
test/endpoints/: conftest.py  test_type_games.py
test/endpoints/steps/: get_all_type_games_endpoint_steps.py  get_type_games_by_user_endpoint_steps.py
test/endpoints/util/: util_neo4j.py
tests/: .coveragerc  conftest.py
tests/bptest/: get_all_type_games_use_case_test.py  get_type_games_by_user_use_case_test.py
tests/bptest/steps/: get_all_type_games_use_case_steps.py  get_games_by_user_uc_steps.py
tests/endpoints/: type_games_test.py
tests/endpoints/steps/: get_all_type_games_endpoint_steps.py  get_type_games_by_user_endpoint_steps.py
tests/endpoints/util/: util_neo4j.py
tests/resources/: file.json
